force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending integration of Order records*** Integrated with M3 on a &quot;Display Only&quot; basis (not stored in Salesforce); requires a Visualforce page to display.</description>
    <label>Order</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Order Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>