force-app/main/default/objects/Order__c/fields/High_Status__c.field-meta.xml
<CustomField>
    <fullName>High_Status__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>High Status</label>
    <length>2</length>
    <type>Text</type>
</CustomField>