force-app/main/default/objects/Order__c/fields/M3_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>M3_Order_Number__c</fullName>
    <description>Integrated with M3 for display in Salesforce</description>
    <externalId>true</externalId>
    <label>M3 Order Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>