force-app/main/default/objects/Order__c/fields/M3_Order_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>M3_Order_Type_Code__c</fullName>
    <label>M3 Order Type Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>