force-app/main/default/objects/Order__c/fields/M3_Order_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>M3_Order_Type_Description__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>M3 Order Type Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>