force-app/main/default/objects/Order__c/fields/Order_Stop_Code__c.field-meta.xml
<CustomField>
    <fullName>Order_Stop_Code__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Order Stop Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>