force-app/main/default/objects/Order__c/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Order Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>