force-app/main/default/objects/Order__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <description>Integrated with M3 as &quot;Display Only&quot; data (not stored in Salesforce)</description>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>